# pdf-qcm-generator

./: .gitignore  README.md
backend/: .coverage  .env  Dockerfile  alembic.ini  check_users.py  fly.toml  generate_key  make_admin.py  package.json  pyproject.toml  requirements.txt  test.db  test.db  # Remplacez aiosqlite par sqlite standard
backend/app/: auth.py  base.py  database.py  email_utils.py  google_oauth.py  main.py  models.py  pdf_processor.py  schemas.py
backend/app/admin/: __init__.py  admin_routes.py
backend/app/auth/: __init__.py  auth.py  auth_middlewares.py  auth_routes.py  auth_service.py  backend.py  google_oauth.py  jwt_utils.py  manager.py  router.py
backend/app/auth/providers/: base_provider.py  google_provider.py  password_provider.py
backend/app/auth/security/: bruteforce_protection.py  password_validation.py
backend/app/core/: config.py
backend/app/folders/: __init__.py  folder_routes.py
backend/app/migrations/: env.py
backend/app/models/: __init__.py  folder_model.py  pdf_model.py  pdf_model_updated.py  user_model.py  user_model_updated.py
backend/app/pdf/: __init__.py  pdf_routes.py
backend/app/security/: encryption.py
backend/keys/: encryption_key.key
backend/migrations/: env.py
backend/migrations/versions/: d6606350739f_initial_migration.py
frontend/: .env  .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/public/: site.webmanifest
frontend/src/: App.css  App.tsx  PdfUploadComponent.tsx  PdfUploadPage.tsx  SidebarOverride.css  (+3 more)
(+41 files in other folders)
