[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.12"}
psycopg = {extras = ["binary"], version = "^3.2.6"}
langchain = "^0.3.23"
langchain-openai = "^0.3.12"
pypdf = "^5.4.0"
python-multipart = "^0.0.18"
fastapi-users = "^12.1.3"
fastapi-users-db-sqlalchemy = "^6.0.1"
sqlalchemy = "^2.0.29"
httpx-oauth = "^0.13.2"
python-jose = "^3.3.0"
python-dotenv = "^1.0.1"
aiosqlite = "^0.20.0"
bcrypt = "^4.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
